--- a/Public/css/home/customercase.css
+++ b/Public/css/home/customercase.css
@@ -31,7 +31,7 @@
 	.khjdal{font-size: 12px;color: #4c4c4c;margin-left: 3px;line-height: 12px;}
 	.timeimgjdal{width: 10px;height: 10px;background:url(../../imgs/home/customercase/timewjjdal.png) no-repeat;background-size: 100% auto;}
 	.topsgzj{margin-top: 4px;}
-	.ggztbx{-moz-transform:scale(0.8);-webkit-transform:scale(0.8);-o-transform:scale(0.8);}
+	.ggztbx{-moz-transform:scale(0.8);-webkit-transform:scale(0.8);-o-transform:scale(0.8);width: 305px;left: -30px;}
 	.hentxjdal{font-size: 10px;color: #4c4c4c;}
 	.hentxjdalwf{margin-top: 19px;}
 	.lefjdalheny{margin-left: 25px;}
@@ -80,7 +80,7 @@
 	.khjdal{font-size: 8px;color: #4c4c4c;margin-left: 2px;line-height: 8px;}
 	.timeimgjdal{width: 7px;height: 7px;background:url(../../imgs/home/customercase/timewjjdal.png) no-repeat;background-size: 100% auto;}
 	.topsgzj{margin-top: 2px;}
-	.ggztbx{-moz-transform:scale(0.8);-webkit-transform:scale(0.8);-o-transform:scale(0.8);}
+	.ggztbx{-moz-transform:scale(0.8);-webkit-transform:scale(0.8);-o-transform:scale(0.8);width: 216px;left: -21px;}
 	.hentxjdal{font-size: 7px;color: #4c4c4c;}
 	.hentxjdalwf{margin-top: 13px;}
 	.lefjdalheny{margin-left: 17px;}
