--- a/Public/css/home/indebottom.css
+++ b/Public/css/home/indebottom.css
@@ -136,3 +136,4 @@ body,html{margin: 0px !important;padding: 0px !important;}
 .hsoyyedispainblico{display: inline-block;}
 .uscoprigcss{color: #4a4a49;}
 .sendkbotm{z-index: 12;box-shadow:-1px 0px 10px #e5e5e5;}
+.zhezhaoce{position: fixed;;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.7);z-index:12;}
