--- a/Public/css/home/aboutus.css
+++ b/Public/css/home/aboutus.css
@@ -4,6 +4,20 @@
 /* 当展现页面的宽度大于1400px时的样式。 */
 @media screen and (min-width: 1400px){
 	.kubabo{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/kububo.png) no-repeat;background-size: 100% auto;}
+	.tanimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/tanimg.png) no-repeat;background-size: 100% auto;}
+	.yamimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/yamimg.png) no-repeat;background-size: 100% auto;}
+	.honimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/honimg.png) no-repeat;background-size: 100% auto;}
+	.hitimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/hitimg.png) no-repeat;background-size: 100% auto;}
+	.fzimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/fzimg.png) no-repeat;background-size: 100% auto;}
+	.ibmimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/ibmimg.png) no-repeat;background-size: 100% auto;}
+	.sonimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/sonimg.png) no-repeat;background-size: 100% auto;}
+	.hpimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/hpimg.png) no-repeat;background-size: 100% auto;}
+	.poimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/poimg.png) no-repeat;background-size: 100% auto;}
+	.taimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/taimg.png) no-repeat;background-size: 100% auto;}
+	.cicimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/cicimg.png) no-repeat;background-size: 100% auto;}
+	.leimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/leimg.png) no-repeat;background-size: 100% auto;}
+	.zgimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/zgimg.png) no-repeat;background-size: 100% auto;}
+	.cncimg{border: 1xp solid red;width: 174px;height: 79px;background:url(../../imgs/home/shoyue/cncimg.png) no-repeat;background-size: 100% auto;}
 	.spanmaleft{margin: 0px 0px 0px 80px;}
 	.erspanmaleft span{margin: 63px 0px 0px 80px;}
 	.sanspanmaleft span{margin: 63px 0px 0px 80px;}
@@ -134,6 +148,20 @@
 /* 当展现页面的宽度大于1000px且小于1400px时，的样式。 */
 @media screen and (min-width: 100px) and (max-width: 1400px) {
 	.kubabo{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/kububo.png) no-repeat;background-size: 100% auto;}
+	.tanimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/tanimg.png) no-repeat;background-size: 100% auto;}
+	.yamimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/yamimg.png) no-repeat;background-size: 100% auto;}
+	.honimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/honimg.png) no-repeat;background-size: 100% auto;}
+	.hitimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/hitimg.png) no-repeat;background-size: 100% auto;}
+	.fzimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/fzimg.png) no-repeat;background-size: 100% auto;}
+	.ibmimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/ibmimg.png) no-repeat;background-size: 100% auto;}
+	.sonimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/sonimg.png) no-repeat;background-size: 100% auto;}
+	.hpimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/hpimg.png) no-repeat;background-size: 100% auto;}
+	.poimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/poimg.png) no-repeat;background-size: 100% auto;}
+	.taimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/taimg.png) no-repeat;background-size: 100% auto;}
+	.cicimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/cicimg.png) no-repeat;background-size: 100% auto;}
+	.leimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/leimg.png) no-repeat;background-size: 100% auto;}
+	.zgimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/zgimg.png) no-repeat;background-size: 100% auto;}
+	.cncimg{border: 1xp solid red;width: 123px;height: 56px;background:url(../../imgs/home/shoyue/cncimg.png) no-repeat;background-size: 100% auto;}
 	.spanmaleft{margin: 0px 0px 0px 56px;}
 	.erspanmaleft span{margin: 44px 0px 0px 56px;}
 	.sanspanmaleft span{margin: 44px 0px 0px 56px;}
